--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,18 +8,10 @@ services:
       - "8080:80"
     volumes:
       - ./public:/usr/share/nginx/html
-      - ./site.conf:/etc/nginx/conf.d/site.conf
+      - ./site.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - php-fpm
-      - db
   php-fpm:
-    build: ./docker/php
+    image: php:7-fpm
     volumes:
       - ./public:/usr/share/nginx/html
-  db:
-    image: mysql:latest
-    environment:
-      MYSQL_ROOT_PASSWORD: password
-      MYSQL_DATABASE: database
-      MYSQL_USER: user
-      MYSQL_PASSWORD: password
