Add readme and small changes

--- a/nginx_base_conf/default.conf
+++ b/nginx_base_conf/default.conf
@@ -1,7 +1,18 @@
 server {
-    listen 80 default_server;
+    #listen  80;
+    #server_name localhost;
+    #return  301 https://localhost:443$request_uri;
+}
+
+server {
+    listen 80;
+    #listen 443 ssl default_server;
+    #ssl_certificate /etc/nginx/conf.d/server.crt;
+    #ssl_certificate_key /etc/nginx/conf.d/server.key;
+
     index index.php index.html index.htm;
     server_name localhost;
+
     root /usr/share/nginx/html;
 
     location ~ \.php$ {
