--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,9 +6,10 @@ services:
     image: nginx:latest
     ports:
       - "8080:80"
+      - "443:443"
     volumes:
       - ./public:/usr/share/nginx/html
-      - ./site.conf:/etc/nginx/conf.d/default.conf
+      - ./nginx_base_conf:/etc/nginx/conf.d
     depends_on:
       - php-fpm
   php-fpm:
